[package]
name = "systemd-sys"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/systemd-rs"
repository = "https://github.com/Devolutions/systemd-rs"
authors = ["Richard Markiewicz <rmarkiewicz@devolutions.net>"]
description = "Generated libsystemd FFI declarations"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.17"